# health-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-06-health-intake-chatbot.md
docs/superpowers/specs/: 2026-06-06-health-intake-chatbot-design.md
src/health_intake/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
src/health_intake/appointments/: provider.py
src/health_intake/engine/: extraction.py  orchestrator.py  steps.py
src/health_intake/llm/: client.py  prompts.py
src/health_intake/models/: conversation.py  patient.py
src/health_intake/storage/: writer.py
src/health_intake/validation/: address.py  fields.py
tests/: conftest.py
tests/integration/: test_orchestrator_flow.py
tests/unit/: test_address_validation.py  test_appointments.py  test_cli.py  test_config.py  test_conversation_state.py  test_extraction_apply.py  test_fake_llm.py  test_field_validators.py  test_logging.py  test_patient_models.py  test_prompts.py  test_smoke.py  test_steps.py  test_writer.py
