[tool.poetry]
name = "health-intake"
version = "0.1.0"
description = "Terminal LLM chatbot for patient intake"
authors = ["Siddharth Kapoor <sidkapoor39@gmail.com>"]
readme = "README.md"
packages = [{ include = "health_intake", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.40"
pydantic = "^2.7"
pydantic-settings = "^2.3"
httpx = "^0.27"
tenacity = "^8.4"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
respx = "^0.21"
ruff = "^0.5"
mypy = "^1.10"

[tool.poetry.scripts]
health-intake = "health_intake.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=health_intake --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
